Added a dictionary for MuonAnalysisTools.
At the same time made sure that all virtual functions of
ATE::MuonCalibratorTool would be implemented. Which only showed
up as an error when first trying to instantiate the tool with ROOT.

--- a/MuonAnalysisTools/CMakeLists.txt
+++ b/MuonAnalysisTools/CMakeLists.txt
@@ -8,3 +8,8 @@ atlas_add_library(MuonAnalysisToolsLib
    MuonAnalysisTools/*.h Root/*.cxx
    PUBLIC_HEADERS MuonAnalysisTools
    LINK_LIBRARIES PATInterfaces AsgMessagingLib AsgTools xAODMuon)
+
+atlas_add_dictionary(MuonAnalysisToolsDict
+   MuonAnalysisTools/MuonAnalysisToolsDict.h
+   MuonAnalysisTools/selection.xml
+   LINK_LIBRARIES MuonAnalysisToolsLib)
