Added an example for using the tool from RDF.

--- a/AnalysisDemo/CMakeLists.txt
+++ b/AnalysisDemo/CMakeLists.txt
@@ -24,5 +24,8 @@ endif()
 
 # Install files from the package.
 atlas_install_python_modules(python/*.py)
-atlas_install_scripts(share/*_eljob.py)
-atlas_install_joboptions(share/*_jobOptions.py)
+if(XAOD_STANDALONE)
+   atlas_install_scripts(share/*_eljob.py share/*_rdf.py)
+else()
+   atlas_install_joboptions(share/*_jobOptions.py)
+endif()
