Making a snapshot of the RDF experiments.

--- a/MuonAnalysisTools/CMakeLists.txt
+++ b/MuonAnalysisTools/CMakeLists.txt
@@ -3,11 +3,16 @@
 # Set the name of the package.
 atlas_subdir(MuonAnalysisTools)
 
+# Find the needed external(s).
+find_package(ROOT COMPONENTS Core ROOTVecOps)
+
 # Component(s) in the package.
 atlas_add_library(MuonAnalysisToolsLib
    MuonAnalysisTools/*.h Root/*.cxx
    PUBLIC_HEADERS MuonAnalysisTools
-   LINK_LIBRARIES PATInterfaces AsgMessagingLib AsgTools xAODMuon)
+   INCLUDE_DIRS ${ROOT_INCLUDE_DIRS}
+   LINK_LIBRARIES ${ROOT_LIBRARIES} PATInterfaces AsgMessagingLib AsgTools
+                  xAODMuon)
 
 atlas_add_dictionary(MuonAnalysisToolsDict
    MuonAnalysisTools/MuonAnalysisToolsDict.h
