Made the "muon variator" functors work with RDF::Vary.
As it turns out, the key was finding the correct return type for
the functors.

--- a/AnalysisDemo/CMakeLists.txt
+++ b/AnalysisDemo/CMakeLists.txt
@@ -4,7 +4,7 @@
 atlas_subdir(AnalysisDemo)
 
 # Find the needed external(s).
-find_package(ROOT COMPONENTS Core ROOTVecOps Gpad)
+find_package(ROOT COMPONENTS Core Gpad ROOTVecOps ROOTDataFrame)
 find_package(VDT)
 
 # Component(s) in the package.
